# k8pk

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CONFIG_FILE.md  CONTRIBUTING.md  FEATURES.md  INTERACTIVE_FEATURES.md  ITERM_SETUP.md  LICENSE  MIGRATION.md  MULTI_CLUSTER.md  README.md  TESTING.md  findings.md  flake.nix  install.sh  k8pk.rb.for-homebrew-tap  k8pk.yaml.example  migrate-repo.sh  release.sh  setup-iterm.sh
.githooks/: pre-commit
.github/: RELEASE_PROCESS.md  release-please-config.json
.github/workflows/: checks.yml  ci.yml  homebrew.yml  release-please.yml  release.yml
docs/: packaging.md
ghostty/: README.md  config.example
homebrew/Formula/: k8pk.rb  wezterm-k8s-helper.rb
packaging/aur/: PKGBUILD.example
plugin/: init.lua
rust/k8pk/: CHANGELOG.md  Cargo.toml  build.rs  test_extract
rust/k8pk/src/: cli.rs  config.rs  error.rs  kubeconfig.rs  main.rs  shell.rs  state.rs  test_http.rs
rust/k8pk/src/commands/: alias.rs  config_ui.rs  context.rs  doctor.rs  guide.rs  interactive.rs  kubeconfig_ops.rs  login.rs  mod.rs  organize.rs  sessions.rs  tmux.rs  update.rs
rust/k8pk/src/commands/login/: gke.rs  k8s.rs  mod.rs  ocp.rs  rancher.rs
rust/wezterm-k8s-helper/: Cargo.toml
rust/wezterm-k8s-helper/src/: main.rs
shell/: k8pk.fish  k8pk.sh
spec/: plugin_spec.lua  wezterm_mock.lua
tests/: TESTING.md  plugin_spec.lua  test-both-clis.sh  test-iterm.sh  test-kubectl-oc-comprehensive.sh  test.sh
tests/fixtures/: fake-oc.sh
