[package]
name = "k8pk"
version = "0.10.8"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
thiserror = "1.0"
dirs-next = "2.0"
which = "8.0"
inquire = "0.7"
globset = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap_complete = "4.5"
tempfile = "3.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"  # Progress spinners
shell-words = "1.1"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
