[package]
name = "k8pk"
version = "1.16.1"
edition = "2021"
license = "MIT"
description = "Fast Kubernetes context and namespace switcher with session isolation"
repository = "https://github.com/vee-sh/k8pk"
authors = ["vee-sh"]
keywords = ["kubernetes", "kubectl", "kubeconfig", "context", "namespace"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
thiserror = "1.0"
dirs-next = "2.0"
which = "8.0"
inquire = "0.7"
globset = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap_complete = "4.5"
tempfile = "3.8"
shell-words = "1.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
